[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-hashtag-crawler"
version = "2.0.0"
description = "Instagram hashtag crawler using instaloader"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Simon Seo", email = "simonseo.doubles@gmail.com" },
]
dependencies = [
    "instaloader>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
browser = [
    "browser_cookie3>=0.19",
]

[project.scripts]
instagram-hashtag-crawler = "instagram_hashtag_crawler.cli:main"
instagram-hashtag-export = "instagram_hashtag_crawler.export:main"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["instagram_hashtag_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
